--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxt/content-theme-docs": "^0.10.1",
+    "firebase-tools": "^9.14.0",
     "nuxt": "^2.15.2",
     "prism-themes": "^1.7.0"
   }
